# wfreq

./: .gitignore  PLAN.txt  README.md  pyproject.toml  requirements.txt
resources/red_flags/: red_flags2.txt
src/: cli.py
src/in_out/: finder.py
wfreq/: cli.py
wfreq/core/: filter.py  formatter.py
wfreq/resources/red_flags/: red_flags.txt
